Minor bugfix to recenter search icon on firefox

--- a/source/style/_global/docsearch.less
+++ b/source/style/_global/docsearch.less
@@ -9,6 +9,7 @@
 
 .algolia-autocomplete {
 	width: 100%;
+	vertical-align: top;
 }
 
 // Main autocomplete wrapper
